# bookstore

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  openapi.json  openapi.yml  package-lock.json  package.json  pyproject.toml  redoc-static.html  redocly.yaml
alembic/versions/: 2f28ab950c8b_first_migration.py
app/: main.py  validator.py
schemas/: _index.json  author.json  book.json  currency.json  filter.json  id.json  isbn.json  link.json  page.json  price.json  publisher.json  year.json
tests/validator/: test_validate_price.py
