[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Alvaro Sanchez"]
readme = "README.md"
packages = [{include = "bookstore"}]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.21.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"
jsonschema = "^4.16.0"
PyYAML = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]